--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
+                        <a class="nav-link" href="about.html">About Us</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="departmentsDropdown" role="button"
@@ -49,11 +49,11 @@
                     <li class="nav-item">
                         <a class="nav-link" href="careers.html">Careers</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="R&D.html">Research & Development</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="nav-link" href="contact.html">Contact Us</a>
                     </li>
                 </ul>
             </div>
@@ -115,12 +115,17 @@
                     <div class="about-whatwe-contentset">
                         <h6 class="mb-2 core-values">Core Values</h6>
                         <ul>
-                            <li>Integrity – We uphold the highest standards of honesty and transparency in everything we do.</li>
-                            <li>Quality – We are committed to promoting only the finest, rigorously tested pharmaceutical products.</li>
-                            <li>Innovation – We embrace change and seek creative approaches to healthcare marketing.</li>
-                            <li>Customer-Centricity – We prioritize the needs of healthcare providers, patients, and partners.</li>
+                            <li>Integrity – We uphold the highest standards of honesty and transparency in everything we
+                                do.</li>
+                            <li>Quality – We are committed to promoting only the finest, rigorously tested
+                                pharmaceutical products.</li>
+                            <li>Innovation – We embrace change and seek creative approaches to healthcare marketing.
+                            </li>
+                            <li>Customer-Centricity – We prioritize the needs of healthcare providers, patients, and
+                                partners.</li>
                             <li>Collaboration – We believe in the power of teamwork and long-term partnerships.</li>
-                            <li>Responsibility – We operate with a sense of duty toward society, the environment, and future generations.</li>
+                            <li>Responsibility – We operate with a sense of duty toward society, the environment, and
+                                future generations.</li>
                         </ul>
                     </div>
                 </div>
@@ -176,7 +181,11 @@
                     </div>
                     <div class="text-section-aboutwhychooseus">
                         <h2>Caring for Your Health with Integrity & Excellence</h2>
-                        <p>Partnering with us means choosing trust, innovation, and a true commitment to global health. We connect high-quality, tested pharmaceutical products with the people who need them, using smart, ethical marketing strategies. Our focus on people—patients, partners, and healthcare professionals—is what truly sets us apart. Plus, our deep industry knowledge helps us stay ahead in a fast-changing healthcare world.</p>
+                        <p>Partnering with us means choosing trust, innovation, and a true commitment to global health.
+                            We connect high-quality, tested pharmaceutical products with the people who need them, using
+                            smart, ethical marketing strategies. Our focus on people—patients, partners, and healthcare
+                            professionals—is what truly sets us apart. Plus, our deep industry knowledge helps us stay
+                            ahead in a fast-changing healthcare world.</p>
                         <div class="contact-section-aboutwhychooseus">
                             <div class="wellness-journey-aboutwhychooseus">
                                 <h5>Wellness Journey</h5>
@@ -195,159 +204,6 @@
         </div>
     </section>
 
-    <!-- our achievement section  -->
-    <section class="about-achievements-section">
-        <div class="container-fluid p-0">
-            <div class="row align-items-center">
-                <!-- Left Content -->
-                <div class="col-lg-4 mb-4 mb-lg-0">
-                    <h2 class="about-achievements-title">Our<br>Achievements</h2>
-                    <p class="about-achievements-text">
-                        Behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind
-                        texts the word.
-                    </p>
-                    <!-- Arrows -->
-                    <div class="about-achievements-arrows mt-3">
-                        <button class="btn btn-light shadow-sm me-2" type="button" id="prevSlideBtn">
-                            <i class="fas fa-chevron-left"></i>
-                        </button>
-                        <button class="btn btn-light shadow-sm" type="button" id="nextSlideBtn">
-                            <i class="fas fa-chevron-right"></i>
-                        </button>
-                    </div>
-
-                </div>
-
-                <!-- Carousel Logos -->
-                <div class="col-lg-8">
-                    <div id="achievementsCarousel" class="carousel slide" data-bs-ride="carousel">
-                        <div class="carousel-inner">
-
-                            <!-- Slide 1 -->
-                            <div class="carousel-item active">
-                                <div class="row text-center">
-                                    <div class="col-4"><img src="img/award-1.png" class="achievements-awards-logos"
-                                            alt="Award 1"></div>
-                                    <div class="col-4"><img src="img/award-2.png" class="achievements-awards-logos"
-                                            alt="Award 2"></div>
-                                    <div class="col-4"><img src="img/award-3.png" class="achievements-awards-logos"
-                                            alt="Award 3"></div>
-                                </div>
-                                <div class="row mt-4 text-center">
-                                    <div class="col-4"><img src="img/award-1.png" class="achievements-awards-logos"
-                                            alt="Award 4"></div>
-                                    <div class="col-4"><img src="img/award-2.png" class="achievements-awards-logos"
-                                            alt="Award 5"></div>
-                                    <div class="col-4"><img src="img/award-3.png" class="achievements-awards-logos"
-                                            alt="Award 6"></div>
-                                </div>
-                            </div>
-
-                            <!-- Slide 2 -->
-                            <div class="carousel-item">
-                                <div class="row text-center">
-                                    <div class="col-4"><img src="img/award-1.png" class="achievements-awards-logos"
-                                            alt="Award 7"></div>
-                                    <div class="col-4"><img src="img/award-2.png" class="achievements-awards-logos"
-                                            alt="Award 8"></div>
-                                    <div class="col-4"><img src="img/award-3.png" class="achievements-awards-logos"
-                                            alt="Award 9"></div>
-                                </div>
-                                <div class="row mt-4 text-center">
-                                    <div class="col-4"><img src="img/award-1.png" class="achievements-awards-logos"
-                                            alt="Award 10"></div>
-                                    <div class="col-4"><img src="img/award-2.png" class="achievements-awards-logos"
-                                            alt="Award 11"></div>
-                                    <div class="col-4"><img src="img/award-3.png" class="achievements-awards-logos"
-                                            alt="Award 12"></div>
-                                </div>
-                            </div>
-
-                        </div>
-
-                        <!-- Hidden Required Controls for JS -->
-                        <button class="carousel-control-prev d-none" type="button"
-                            data-bs-target="#achievementsCarousel" data-bs-slide="prev"></button>
-                        <button class="carousel-control-next d-none" type="button"
-                            data-bs-target="#achievementsCarousel" data-bs-slide="next"></button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- <faqs section start  -->
-    <section class="vividus-faqs-section">
-        <div class="container-fluid p-0">
-            <div class="text-center mb-4">
-                <div class="vividus-faqs-subtitle">FAQs</div>
-                <h2 class="vividus-faqs-title font-weight-bold">Frequently Asked Questions</h2>
-                <p class="text-muted">
-                    This FAQ section addresses common questions regarding private nursing and home care services.
-                </p>
-            </div>
-
-            <div id="faqAccordion" class="vividus-faqs-accordion">
-
-                <!-- FAQ Item 1 -->
-                <div class="card">
-                    <div class="vividus-faqs-header" data-toggle="collapse" data-target="#faq1">
-                        <div><strong>01</strong> Do I need a prescription to buy medicine?</div>
-                        <div class="faq-icon"><i class="fas fa-chevron-down"></i></div>
-                    </div>
-                    <div id="faq1" class="collapse" data-parent="#faqAccordion">
-                        <div class="vividus-faqs-body">
-                            Yes, prescription medications require a valid prescription from a licensed doctor.
-                            Over-the-counter (OTC) medicines can be purchased without one. </div>
-                    </div>
-                </div>
-
-                <!-- FAQ Item 2 -->
-                <div class="card">
-                    <div class="vividus-faqs-header active" data-toggle="collapse" data-target="#faq2">
-                        <div><strong>02</strong> Can I order medicine online from your pharmacy?</div>
-                        <div class="faq-icon rotate"><i class="fas fa-chevron-down"></i></div>
-                    </div>
-                    <div id="faq2" class="collapse show" data-parent="#faqAccordion">
-                        <div class="vividus-faqs-body">
-                            Yes, you can easily order medicines online through our website. We also offer home delivery
-                            for both prescription and OTC products.
-                        </div>
-                    </div>
-                </div>
-
-                <!-- FAQ Item 3 -->
-                <!-- <div class="card">
-                    <div class="vividus-faqs-header" data-toggle="collapse" data-target="#faq3">
-                        <div><strong>03</strong> How do I upload my prescription?</div>
-                        <div class="faq-icon"><i class="fas fa-chevron-down"></i></div>
-                    </div>
-                    <div id="faq3" class="collapse" data-parent="#faqAccordion">
-                        <div class="vividus-faqs-body">
-                            You can upload your prescription during the checkout process or by logging into your account
-                            and selecting the “Upload Prescription” option.
-                        </div>
-                    </div>
-                </div> -->
-
-                <!-- FAQ Item 4 -->
-                <div class="card">
-                    <div class="vividus-faqs-header" data-toggle="collapse" data-target="#faq4">
-                        <div><strong>03</strong> Are generic drugs safe to use?</div>
-                        <div class="faq-icon"><i class="fas fa-chevron-down"></i></div>
-                    </div>
-                    <div id="faq4" class="collapse" data-parent="#faqAccordion">
-                        <div class="vividus-faqs-body">
-                            Yes, generic drugs are approved by health authorities and contain the same active
-                            ingredients as branded medicines. They’re safe, effective, and more affordable.
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </section>
-    <!-- <faqs section end  -->
 
     <!-- our contact  section code start -->
     <section class="vividus-contecthome-section text-white">
@@ -407,9 +263,21 @@
                 </div>
                 <div class="col-md-3 mb-3">
                     <h6>Information</h6>
-                    <p>+91 9876543210</p>
-                    <p>+91 9876543210</p>
-                    <p>mail@example</p>
+                    <p>
+                        <a href="tel:+919876543210" class="text-decoration-none text-dark">
+                            📞 +91 9876543210
+                        </a>
+                    </p>
+                    <p>
+                        <a href="https://wa.me/919876543210" target="_blank" class="text-decoration-none text-dark">
+                            💬 WhatsApp: +91 9876543210
+                        </a>
+                    </p>
+                    <p>
+                        <a href="mailto:mail@example.com" class="text-decoration-none text-dark">
+                            ✉️ mail@example.com
+                        </a>
+                    </p>
                 </div>
                 <div class="col-md-3 mb-3">
                     <h6>Our Location</h6>
