--- a/cardiac.html
+++ b/cardiac.html
@@ -33,7 +33,7 @@
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
+                        <a class="nav-link" href="about.html">About Us</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="departmentsDropdown" role="button"
@@ -51,11 +51,11 @@
                     <li class="nav-item">
                         <a class="nav-link" href="careers.html">Careers</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="R&D.html">Research & Development</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="nav-link" href="contact.html">Contact Us</a>
                     </li>
                 </ul>
             </div>
@@ -71,7 +71,7 @@
 
     <div class="container-fluid cardiac-vividus-container ">
         <div class="text-start vividu-orthopedic-header mb-4">
-            <h2>CARDIAC & DIABETIC</h2> 
+            <h2>CARDIAC & DIABETIC</h2>
         </div>
         <div class="row g-4 d-flex">
 
@@ -84,8 +84,7 @@
                     <p>Glimepiride 1mg / 2mg + Metformin 500mg</p>
 
                     <div class="cardiac-vividus-title">
-                        <img src="img/VIVIDUS Logos/Frame 24.png" alt="Glimedus - M1 / M2 Forte"
-                            class="product-logo" />
+                        <img src="img/VIVIDUS Logos/Frame 24.png" alt="Glimedus - M1 / M2 Forte" class="product-logo" />
                     </div>
                     <p>Glimepiride 1mg / 2mg + Metformin 1000mg</p>
 
@@ -274,7 +273,7 @@
                     <div class="cardiac-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 41.png" alt="Rabedus - DSR" class="product-logo" />
                     </div>
-                    <p >Rabeprazole 20mg + Domperidone 30mg Capsules</p>
+                    <p>Rabeprazole 20mg + Domperidone 30mg Capsules</p>
                 </div>
             </div>
 
@@ -339,9 +338,21 @@
                 </div>
                 <div class="col-md-3 mb-3">
                     <h6>Information</h6>
-                    <p>+91 9876543210</p>
-                    <p>+91 9876543210</p>
-                    <p>mail@example</p>
+                    <p>
+                        <a href="tel:+919876543210" class="text-decoration-none text-dark">
+                            📞 +91 9876543210
+                        </a>
+                    </p>
+                    <p>
+                        <a href="https://wa.me/919876543210" target="_blank" class="text-decoration-none text-dark">
+                            💬 WhatsApp: +91 9876543210
+                        </a>
+                    </p>
+                    <p>
+                        <a href="mailto:mail@example.com" class="text-decoration-none text-dark">
+                            ✉️ mail@example.com
+                        </a>
+                    </p>
                 </div>
                 <div class="col-md-3 mb-3">
                     <h6>Our Location</h6>
