--- a/urology.html
+++ b/urology.html
@@ -33,7 +33,7 @@
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
+                        <a class="nav-link" href="about.html">About Us</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="departmentsDropdown" role="button"
@@ -51,11 +51,11 @@
                     <li class="nav-item">
                         <a class="nav-link" href="careers.html">Careers</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="R&D.html">Research & Development</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="nav-link" href="contact.html">Contact Us</a>
                     </li>
                 </ul>
             </div>
@@ -98,7 +98,7 @@
                 <div class="vividu-orthopedic-card vividu-orthopedic-orange text-center">
                     <img src="img/VIVIDUS Logos/Frame 15.png" alt="URIPACE-D" class="product-logo mb-2" />
                     <div class="vividu-orthopedic-text">
-                        Tamsulosin Hydrochloride IP 0.4mg, 
+                        Tamsulosin Hydrochloride IP 0.4mg,
                         Dutasteride IP 0.5mg
                     </div>
 
@@ -109,7 +109,7 @@
 
                     <img src="img/VIVIDUS Logos/Frame 17.png" alt="ASSURE-M" class="product-logo mt-3 mb-2" />
                     <div class="vividu-orthopedic-text">
-                        Co-enzyme Q10, Astaxanthin, Lycopene, 
+                        Co-enzyme Q10, Astaxanthin, Lycopene,
                         L-Arginine, L-Carnitine, Zinc Tablets
                     </div>
 
@@ -125,8 +125,8 @@
                 <div class="vividu-orthopedic-card vividu-orthopedic-blue text-center">
                     <img src="img/VIVIDUS Logos/Frame 19 (1).png" alt="VIVIFer" class="product-logo mb-2" />
                     <div class="vividu-orthopedic-text">
-                        Ferrous Ascorbate 100mg, Cyanocobalamin 75mcg, 
-                        Folic Acid 1.5mg, Pyridoxine Hydrochloride 1.5mg, 
+                        Ferrous Ascorbate 100mg, Cyanocobalamin 75mcg,
+                        Folic Acid 1.5mg, Pyridoxine Hydrochloride 1.5mg,
                         Cholecalciferol 1000 IU
                     </div>
 
@@ -140,7 +140,7 @@
 
                     <img src="img/VIVIDUS Logos/Frame 7.png" alt="Calcidus" class="product-logo mt-3 mb-2" />
                     <div class="vividu-orthopedic-text">
-                        Coral Calcium (from Coral Grains) 500mg, 
+                        Coral Calcium (from Coral Grains) 500mg,
                         Vitamin D3 500 IU
                     </div>
                 </div>
@@ -208,9 +208,21 @@
                 </div>
                 <div class="col-md-3 mb-3">
                     <h6>Information</h6>
-                    <p>+91 9876543210</p>
-                    <p>+91 9876543210</p>
-                    <p>mail@example</p>
+                    <p>
+                        <a href="tel:+919876543210" class="text-decoration-none text-dark">
+                            📞 +91 9876543210
+                        </a>
+                    </p>
+                    <p>
+                        <a href="https://wa.me/919876543210" target="_blank" class="text-decoration-none text-dark">
+                            💬 WhatsApp: +91 9876543210
+                        </a>
+                    </p>
+                    <p>
+                        <a href="mailto:mail@example.com" class="text-decoration-none text-dark">
+                            ✉️ mail@example.com
+                        </a>
+                    </p>
                 </div>
                 <div class="col-md-3 mb-3">
                     <h6>Our Location</h6>
