--- a/ent.html
+++ b/ent.html
@@ -33,7 +33,7 @@
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
+                        <a class="nav-link" href="about.html">About Us</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="departmentsDropdown" role="button"
@@ -51,11 +51,11 @@
                     <li class="nav-item">
                         <a class="nav-link" href="careers.html">Careers</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="R&D.html">Research & Development</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="nav-link" href="contact.html">Contact Us</a>
                     </li>
                 </ul>
             </div>
@@ -220,9 +220,21 @@
                 </div>
                 <div class="col-md-3 mb-3">
                     <h6>Information</h6>
-                    <p>+91 9876543210</p>
-                    <p>+91 9876543210</p>
-                    <p>mail@example</p>
+                    <p>
+                        <a href="tel:+919876543210" class="text-decoration-none text-dark">
+                            📞 +91 9876543210
+                        </a>
+                    </p>
+                    <p>
+                        <a href="https://wa.me/919876543210" target="_blank" class="text-decoration-none text-dark">
+                            💬 WhatsApp: +91 9876543210
+                        </a>
+                    </p>
+                    <p>
+                        <a href="mailto:mail@example.com" class="text-decoration-none text-dark">
+                            ✉️ mail@example.com
+                        </a>
+                    </p>
                 </div>
                 <div class="col-md-3 mb-3">
                     <h6>Our Location</h6>
