--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
     <header class="vividus-header-main navbar navbar-expand-lg navbar-light">
         <div class="container-fluid px-0">
             <a class="navbar-brand" href="index.html">
-            <img src="img/vividus-logo1.png" class="VIVIDUS-Logo-img" alt="VIVIDUS Logo">
+                <img src="img/vividus-logo1.png" class="VIVIDUS-Logo-img" alt="VIVIDUS Logo">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
-            </button> 
+            </button>
             <div class="collapse navbar-collapse vividus-header-nav" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
+                        <a class="nav-link" href="about.html">About Us</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="departmentsDropdown" role="button"
@@ -49,11 +49,11 @@
                     <li class="nav-item">
                         <a class="nav-link" href="careers.html">Careers</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="R&D.html">Research & Development</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="nav-link" href="contact.html">Contact Us</a>
                     </li>
                 </ul>
             </div>
@@ -85,7 +85,8 @@
                         style="background-image: linear-gradient(rgba(40, 167, 69, 0.5), rgba(40, 167, 69, 0.5)), url('img/Slider-1.jpg');">
                         <div class="carousel-caption">
                             <h1>ADVANCED <br> CARDIOLOGY CARE</h1>
-                            <p>Expert cardiac care with advanced diagnostics and personalized treatment for a healthier heart.</p>
+                            <p>Expert cardiac care with advanced diagnostics and personalized treatment for a healthier
+                                heart.</p>
                             <!-- <a href="cardiac.html" class="btn btn-primary">Explore</a> -->
                         </div>
                     </div>
@@ -95,7 +96,8 @@
                         style="background-image: linear-gradient(to bottom right, rgba(255, 182, 193, 0.6), rgba(255, 105, 180, 0.6)), url('img/Slider-2.webp');">
                         <div class="carousel-caption">
                             <h1>EXPERT <br>INFERTILITY CARE</h1>
-                            <p>Compassionate fertility solutions with advanced treatments tailored to your parenthood journey.</p>
+                            <p>Compassionate fertility solutions with advanced treatments tailored to your parenthood
+                                journey.</p>
                             <!-- <a href="gynaecology.html" class="btn btn-primary">Discover</a> -->
                         </div>
                     </div>
@@ -115,17 +117,18 @@
             <div class="col-md-3 col-sm-6 mb-4">
                 <div class="vividus-services-card">
                     <div class="vividus-services-icon">
-                        <img class="vividus-product-icons" src="img/Cardiac-icon.png" alt="Cardiac-icon"> 
+                        <img class="vividus-product-icons" src="img/Cardiac-icon.png" alt="Cardiac-icon">
                     </div>
                     <h5>Cardiac</h5>
-                    <p>Comprehensive heart care focused on prevention, diagnosis, and treatment of cardiovascular diseases.</p>
+                    <p>Comprehensive heart care focused on prevention, diagnosis, and treatment of cardiovascular
+                        diseases.</p>
                     <a href="cardiac.html" class="vividus-services-btn">Learn More →</a>
                 </div>
             </div>
             <div class="col-md-3 col-sm-6 mb-4">
                 <div class="vividus-services-card">
                     <div class="vividus-services-icon">
-                        <img class="vividus-product-icons" src="img/Diabetic-icon.png" alt="Diabetic-icon"> 
+                        <img class="vividus-product-icons" src="img/Diabetic-icon.png" alt="Diabetic-icon">
                     </div>
                     <h5>Diabetic</h5>
                     <p>Expert management and support for diabetes to maintain healthy blood sugar levels.</p>
@@ -135,7 +138,7 @@
             <div class="col-md-3 col-sm-6 mb-4">
                 <div class="vividus-services-card">
                     <div class="vividus-services-icon">
-                        <img class="vividus-product-icons" src="img/orthopedics-icon.png" alt="Orthopedics-icon"> 
+                        <img class="vividus-product-icons" src="img/orthopedics-icon.png" alt="Orthopedics-icon">
                     </div>
                     <h5>Orthopedics</h5>
                     <p>Specialized care for bones, joints, and muscles to restore mobility and reduce pain.</p>
@@ -145,7 +148,7 @@
             <div class="col-md-3 col-sm-6 mb-4">
                 <div class="vividus-services-card">
                     <div class="vividus-services-icon">
-                        <img class="vividus-product-icons" src="img/ent-icon.png" alt="ENT-icon"> 
+                        <img class="vividus-product-icons" src="img/ent-icon.png" alt="ENT-icon">
                     </div>
                     <h5>ENT</h5>
                     <p>Comprehensive treatment of ear, nose, and throat conditions for better health and comfort.</p>
@@ -155,7 +158,7 @@
             <div class="col-md-3 col-sm-6 mb-4">
                 <div class="vividus-services-card">
                     <div class="vividus-services-icon">
-                        <img class="vividus-product-icons" src="img/urology-icon.png" alt="Urology-icon"> 
+                        <img class="vividus-product-icons" src="img/urology-icon.png" alt="Urology-icon">
                     </div>
                     <h5>Urology</h5>
                     <p>Expert care for urinary tract and male reproductive system health and disorders.</p>
@@ -165,7 +168,7 @@
             <div class="col-md-3 col-sm-6 mb-4">
                 <div class="vividus-services-card">
                     <div class="vividus-services-icon">
-                        <img class="vividus-product-icons" src="img/general-icon.png" alt="General-icon"> 
+                        <img class="vividus-product-icons" src="img/general-icon.png" alt="General-icon">
                     </div>
                     <h5>General</h5>
                     <p>Comprehensive primary care services for overall health and wellness at every stage of life.</p>
@@ -175,17 +178,18 @@
             <div class="col-md-3 col-sm-6 mb-4">
                 <div class="vividus-services-card">
                     <div class="vividus-services-icon">
-                        <img class="vividus-product-icons" src="img/Gynaecology-icon.png" alt="Gynaecology-icon"> 
+                        <img class="vividus-product-icons" src="img/Gynaecology-icon.png" alt="Gynaecology-icon">
                     </div>
                     <h5>Gynaecology</h5>
-                    <p>Dedicated care for women’s reproductive health, from routine check-ups to specialized treatments.</p>
+                    <p>Dedicated care for women’s reproductive health, from routine check-ups to specialized treatments.
+                    </p>
                     <a href="gynaecology.html" class="vividus-services-btn">Learn More →</a>
                 </div>
             </div>
             <div class="col-md-3 col-sm-6 mb-4">
                 <div class="vividus-services-card">
                     <div class="vividus-services-icon">
-                        <img class="vividus-product-icons" src="img/infertility-icon.png" alt="Infertility-icon"> 
+                        <img class="vividus-product-icons" src="img/infertility-icon.png" alt="Infertility-icon">
                     </div>
                     <h5>Infertility</h5>
                     <p>Personalized treatments and support to help couples achieve their dream of parenthood.</p>
@@ -196,41 +200,6 @@
     </div>
     <!-- our service  section code end -->
 
-    <!-- About us section code start -->
-    <section class="vividus-aboutus-section">
-        <div class="container-fluid p-0">
-            <div class="row align-items-center">
-                <!-- Left Side Images -->
-                <div class="col-lg-6 mb-4 mb-lg-0">
-                    <div class="position-relative">
-                        <img src="img/home_about.gif" alt="Main" class="img-fluid rounded-4">
-                    </div>
-                </div>
-                <!-- Right Side Content -->
-                <div class="col-lg-6">
-                    <h6 class="vividus-aboutus-subtitle  mb-0">About Us</h6>
-                    <h2 class="vividus-aboutus-maintitle">Your Health <br>Our Commitment</h2>
-                    <p class="vividus-aboutus-text mb-4">We are a pharmaceutical marketing company driven by a passion for healthcare excellence. With a strong portfolio of high-quality products and a dynamic team of professionals, we bridge the gap between manufacturers and medical practitioners.</p>
-                    <div class="row">
-                        <div class="col-md-6 text-md-start mb-3 mb-md-0">
-                            <i class="fas fa-award fa-3x text-white mb-2 vividus-aboutus-icon"></i>
-                            <h5 class="fw-bold mt-3">Certified Medicine</h5>
-                            <p class="small">We offer only GMP-certified medicines that meet global safety and quality standards.</p>
-                        </div>
-                        <div class="col-md-6 text-md-start">
-                            <i class="fas fa-users fa-3x text-white mb-2 vividus-aboutus-icon"></i>
-                            <h5 class="fw-bold mt-3">Professional Team</h5>
-                            <p class="small">Our expert team ensures ethical, accurate, and impactful pharmaceutical marketing support.</p>
-                        </div>
-                    </div>
-                    <a href="about.html" class="a-line"><button class="vividus-aboutus-button">
-                            Read More
-                        </button></a>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- About us section code end -->
 
     <!-- numbers count section code start  -->
     <section class="vividus-homecount-section">
@@ -262,74 +231,46 @@
     </section>
     <!-- numbers count section code end  -->
 
-    <!-- <faqs section start  -->
-    <section class="vividus-faqs-section">
+    <!-- About us section code start -->
+    <section class="vividus-aboutus-section">
         <div class="container-fluid p-0">
-            <div class="text-center mb-4">
-                <div class="vividus-faqs-subtitle">FAQs</div>
-                <h2 class="vividus-faqs-title font-weight-bold">Frequently Asked Questions</h2>
-                <p class="text-muted">
-                    This FAQ section addresses common questions regarding private nursing and home care services.
-                </p>
-            </div>
-
-            <div id="faqAccordion" class="vividus-faqs-accordion">
-
-                <!-- FAQ Item 1 -->
-                <div class="card">
-                    <div class="vividus-faqs-header" data-toggle="collapse" data-target="#faq1">
-                        <div>What types of medicines does your company produce?</div>
-                        <div class="faq-icon"><i class="fas fa-chevron-down"></i></div>
-                    </div>
-                    <div id="faq1" class="collapse" data-parent="#faqAccordion">
-                        <div class="vividus-faqs-body">
-                            We specialize in manufacturing a wide range of pharmaceutical products, including antiviral, antibiotic, and specialty medicines to address various health needs.</div>
+            <div class="row align-items-center">
+                <!-- Left Side Images -->
+                <div class="col-lg-6 mb-4 mb-lg-0">
+                    <div class="position-relative">
+                        <img src="img/home_about.gif" alt="Main" class="img-fluid rounded-4">
                     </div>
                 </div>
-
-                <!-- FAQ Item 2 -->
-                <div class="card">
-                    <div class="vividus-faqs-header active" data-toggle="collapse" data-target="#faq2">
-                        <div>Has your company developed any new medicines for recent viruses?</div>
-                        <div class="faq-icon rotate"><i class="fas fa-chevron-down"></i></div>
-                    </div>
-                    <div id="faq2" class="collapse show" data-parent="#faqAccordion">
-                        <div class="vividus-faqs-body">
-                            Yes, we continuously invest in R&D to develop and launch effective medicines targeting emerging viruses and infectious diseases.
+                <!-- Right Side Content -->
+                <div class="col-lg-6">
+                    <h6 class="vividus-aboutus-subtitle  mb-0">About Us</h6>
+                    <h2 class="vividus-aboutus-maintitle">Your Health <br>Our Commitment</h2>
+                    <p class="vividus-aboutus-text mb-4">We are a pharmaceutical marketing company driven by a passion
+                        for healthcare excellence. With a strong portfolio of high-quality products and a dynamic team
+                        of professionals, we bridge the gap between manufacturers and medical practitioners.</p>
+                    <div class="row">
+                        <div class="col-md-6 text-md-start mb-3 mb-md-0">
+                            <i class="fas fa-award fa-3x text-white mb-2 vividus-aboutus-icon"></i>
+                            <h5 class="fw-bold mt-3">Certified Medicine</h5>
+                            <p class="small">We offer only GMP-certified medicines that meet global safety and quality
+                                standards.</p>
+                        </div>
+                        <div class="col-md-6 text-md-start">
+                            <i class="fas fa-users fa-3x text-white mb-2 vividus-aboutus-icon"></i>
+                            <h5 class="fw-bold mt-3">Professional Team</h5>
+                            <p class="small">Our expert team ensures ethical, accurate, and impactful pharmaceutical
+                                marketing support.</p>
                         </div>
                     </div>
+                    <a href="about.html" class="a-line"><button class="vividus-aboutus-button">
+                            Read More
+                        </button></a>
                 </div>
-
-                <!-- FAQ Item 3 -->
-                <div class="card">
-                    <div class="vividus-faqs-header" data-toggle="collapse" data-target="#faq3">
-                        <div>How do you ensure the quality and safety of your medicines?</div>
-                        <div class="faq-icon"><i class="fas fa-chevron-down"></i></div>
-                    </div>
-                    <div id="faq3" class="collapse" data-parent="#faqAccordion">
-                        <div class="vividus-faqs-body">
-                            All our medicines undergo rigorous quality control tests and comply with international regulatory standards to guarantee safety and efficacy.
-                        </div>
-                    </div>
-                </div>
-
-                <!-- FAQ Item 4 -->
-                <div class="card">
-                    <div class="vividus-faqs-header" data-toggle="collapse" data-target="#faq4">
-                        <div>Where are your medicines manufactured?</div>
-                        <div class="faq-icon"><i class="fas fa-chevron-down"></i></div>
-                    </div>
-                    <div id="faq4" class="collapse" data-parent="#faqAccordion">
-                        <div class="vividus-faqs-body">
-                            Our production facilities are equipped with state-of-the-art technology and are certified to meet global pharmaceutical manufacturing standards.
-                        </div>
-                    </div>
-                </div>
-
             </div>
         </div>
     </section>
-    <!-- <faqs section end  -->
+    <!-- About us section code end -->
+
 
     <!-- our contact  section code start -->
     <section class="vividus-contecthome-section text-white">
@@ -389,9 +330,21 @@
                 </div>
                 <div class="col-md-3 mb-3">
                     <h6>Information</h6>
-                    <p>+91 9876543210</p>
-                    <p>+91 9876543210</p>
-                    <p>mail@example</p>
+                    <p>
+                        <a href="tel:+919876543210" class="text-decoration-none text-dark">
+                            📞 +91 9876543210
+                        </a>
+                    </p>
+                    <p>
+                        <a href="https://wa.me/919876543210" target="_blank" class="text-decoration-none text-dark">
+                            💬 WhatsApp: +91 9876543210
+                        </a>
+                    </p>
+                    <p>
+                        <a href="mailto:mail@example.com" class="text-decoration-none text-dark">
+                            ✉️ mail@example.com
+                        </a>
+                    </p>
                 </div>
                 <div class="col-md-3 mb-3">
                     <h6>Our Location</h6>
@@ -405,7 +358,8 @@
             <div class="row">
                 <div class="col text-center d-flex justify-content-between">
                     <small>Vividus Life Science PVT.LDT</small><br>
-                    <small>Copyright © 2025 All rights reserved <a href="https://digispheretech.in/" target="_blank">DIGISPHERE</a></small>
+                    <small>Copyright © 2025 All rights reserved <a href="https://digispheretech.in/"
+                            target="_blank">DIGISPHERE</a></small>
                 </div>
             </div>
         </div>
